--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.6.3",
-    "mongoose-auto-increment": "^5.0.1"
+    "sqlite3": "^3.1.8"
   }
 }
